# 2care-clinic-voice-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-staging.yml  deploy-voice-demo.yml
app/: __init__.py  observability.py  runtime.py  server.py
app/api/: __init__.py  app.py
app/application/: __init__.py  availability_token.py  booking_reconciler.py  booking_service.py  call_service.py  outbox_worker.py  request_auth.py  slot_presentation.py
app/domain/: __init__.py  clock.py  operation_state.py  provenance.py
app/evaluation/: __init__.py  metrics.py  report.py  scenarios.py
data/: clinic_source_manifest.json
docs/: 2care-submission-writeup.docx  architecture.md  evaluation-call-sheet.md  evaluation.md  implementation-plan.md  implementation-spec.md  production-voice-reliability.md  research-and-decision-register.md  security-and-privacy.md  submission-checklist.md
docs/assignment/: assignment.txt  original-assignment.docx
docs/decisions/: 0001-clinic-and-pms.md  0002-production-aws.md  0004-booking-persistence.md
docs/runbooks/: README.md  deployment.md  disaster-recovery.md  pms-pending.md  voice-outage.md
evals/: measurements.example.jsonl
evals/reports/: observed-pilot-report.md
migrations/: env.py
scripts/: bootstrap_cliniko.py  build_submission_doc.py  create_retell_web_call.mjs  provision_retell_agent.mjs  render_voice_eval.py  validate_voice_eval.py
web-demo/: index.html
(+71 files in other folders)
