[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "2care-clinic-voice-agent"
version = "0.1.0"
description = "Production-oriented bilingual clinic voice receptionist"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.15,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "phonenumbers>=9.0,<10",
  "sqlalchemy[asyncio]>=2.0.39,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires a temporary PostgreSQL server",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
